--- a/SelineAtieno-853-ontology-kbs.ipynb
+++ b/SelineAtieno-853-ontology-kbs.ipynb
@@ -2,23 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9e58d2bc",
+   "id": "e4699b26",
    "metadata": {},
    "source": [
     "Ontology Design (Concepts + Relationships)\n",
-    "Concepts (Classes)\n",
+    "Concepts (Classes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e58d2bc",
+   "metadata": {},
+   "source": [
+    "1. Student\n",
     "\n",
-    "Student\n",
+    "2. Course\n",
     "\n",
-    "Course\n",
+    "3. Relationships (Properties)\n",
     "\n",
-    "Relationships (Properties)\n",
+    "4. prequires(Course → Course): defines prerequisite courses\n",
     "\n",
-    "requires(Course → Course): defines prerequisite courses\n",
+    "5. completed(Student → Course): records courses completed by a student\n",
     "\n",
-    "completed(Student → Course): records courses completed by a student\n",
-    "\n",
-    "eligibleFor(Student → Course): inferred relationship\n",
+    "6. eligibleFor(Student → Course): inferred relationship\n",
     "\n",
     "Explanation:\n",
     "The ontology structures academic advising knowledge by defining what entities exist and how they are connected.\n",
@@ -35,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "1158c33f",
    "metadata": {},
    "outputs": [],
@@ -117,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "id": "dddaca6c",
    "metadata": {},
    "outputs": [],
@@ -182,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "id": "e6017ecf",
    "metadata": {},
    "outputs": [
@@ -193,8 +199,8 @@
       "ELIGIBILITY CHECKS\n",
       "\n",
       "Alice -> AI: (True, set())\n",
-      "Bob -> AI: (False, {'Statistics', 'Machine Learning'})\n",
-      "Carol -> AI: (False, {'Statistics', 'Machine Learning'})\n"
+      "Bob -> AI: (False, {'Machine Learning', 'Statistics'})\n",
+      "Carol -> AI: (False, {'Machine Learning', 'Statistics'})\n"
      ]
     }
    ],
@@ -247,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "a8447a8d",
    "metadata": {},
    "outputs": [
@@ -286,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "id": "a6c30176",
    "metadata": {},
    "outputs": [
@@ -296,7 +302,7 @@
      "text": [
       "......\n",
       "----------------------------------------------------------------------\n",
-      "Ran 6 tests in 0.008s\n",
+      "Ran 6 tests in 0.006s\n",
       "\n",
       "OK\n"
      ]
@@ -304,10 +310,10 @@
     {
      "data": {
       "text/plain": [
-       "<unittest.main.TestProgram at 0x1beeacb4270>"
+       "<unittest.main.TestProgram at 0x1bfc9ec9fd0>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
